# ProjectB_FlappyBird2D

./: .gitignore  Build.bat  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  README.md  RunGame.bat  premake5.lua
AudioModule/: AudioModule.cpp  AudioModule.h
AudioModule/Source/: AudioModule.cpp  AudioModule.h
Client/: Application.cs  AudioModule.cs  Background.cs  Bird.cs  BirdSlate.cs  Button.cs  CommandLine.cs  ContentManager.cs  CrashHandler.cs  DoneSceneNode.cs  FlappyBirdSlate.cs  Floor.cs  GameObject.cs  GameStateDetector.cs  InputManager.cs  Pipe.cs  PipeDetector.cs  PlaySceneNode.cs  ReadySceneNode.cs  RenderManager.cs  ResultBoard.cs  RigidBody.cs  SceneNode.cs  ScoreBoard.cs  Sound.cs  Sprite.cs  StartSceneNode.cs  TTFont.cs  Texture.cs  Timer.cs  Vector.cs  WorldManager.cs
CommonTool/Private/: CrashHandler.cpp  INIFormat.cpp  INISection.cpp
CommonTool/Public/: FileHelper.hpp  INIFormat.h  INISection.h  Macro.h
Content/DB/: PlayRank.db
Content/Font/: SeoulNamsanEB.ini
CrashPacket/: CrashPacket.cs  CrashPacketBody.cs  CrashPacketHeader.cs  ISerialize.cs  Packet.cs
CrashReportCollector/: Application.cs
CrashReportSender/: Application.cs
DatabaseModule/: DatabaseModule.cpp  DatabaseModule.h
FlappyBird2D/Inc/: Background.h  Bird.h  BoundBox2D.h  BoundCircle2D.h  Button.h  ConfigManager.h  EntityManager.h  GeometryPass2D.h  GlyphPass2D.h  IBound2D.h  IEntity.h  IResource.h  IScene.h  InputManager.h  Land.h  MainTitle.h  Panel.h  PauseViewer.h  Pipe.h  PipeController.h  PlayScene.h  RankScene.h  RankViewer.h  ReadyScene.h  ReadyViewer.h  RenderManager.h  ResourceManager.h  ScoreViewer.h  SettingScene.h  Shader.h  SpritePass2D.h  StartScene.h  StatusViewer.h  TTFont.h  Texture2D.h  Vertex2D.h
FlappyBird2D/Src/: Background.cpp  Bird.cpp  BoundBox2D.cpp  BoundCircle2D.cpp  Button.cpp  ConfigManager.cpp  EntityManager.cpp  GeometryPass2D.cpp  GlyphPass2D.cpp  IBound2D.cpp  IEntity.cpp  InputManager.cpp  Land.cpp  Main.cpp  MainTitle.cpp  Panel.cpp  PauseViewer.cpp  Pipe.cpp  PipeController.cpp  PlayScene.cpp  RankScene.cpp  RankViewer.cpp  ReadyScene.cpp  ReadyViewer.cpp  RenderManager.cpp  ResourceManager.cpp  ScoreViewer.cpp  SettingScene.cpp  Shader.cpp  SpritePass2D.cpp  StartScene.cpp  StatusViewer.cpp  TTFont.cpp  Texture2D.cpp
FontAltasTool/: Application.cpp  CrashHandler.h  FileHelper.hpp  Glyph.h  INIFormat.h  INISection.h  Logger.hpp
Game/: Application.cs  AudioModule.cs  Bird.cs  BirdSlate.cs  Color.cs  CommandLine.cs  ConsoleHandler.cs  Content.cs  ContentManager.cs  CrashHandler.cs  Database.cs  DatabaseModule.cs  DoneScene.cs  DoneSceneNode.cs  GameTimer.cs  Logger.cs  Number.cs  PlayScene.cs  PlaySceneNode.cs  RankBoard.cs  RankScene.cs  ReadyScene.cs  RenderManager.cs  Scene.cs  Slate.cs  SlideSlate.cs  StartScene.cs  TTFont.cs  Vector.cs  WorldManager.cs
GameEngine/CrashModule/Src/: CrashModule.cpp
GameEngine/FileModule/: CMakeLists.txt
GameEngine/FileModule/Inc/: FileModule.h
GameEngine/FileModule/Src/: FileModule.cpp
Module/CrashModule/: CMakeLists.txt
Module/FileModule/Src/: FileModule.cpp
Module/MathModule/: CMakeLists.txt
Resource/Button/: Back.json  Blue.json  Day.json  Easy.json  Hard.json  Night.json  Normal.json  Quit.json  Red.json  Reset.json  Setting.json  Start.json  Yellow.json
Resource/Panel/: Background.json  Bird.json  Level.json  MainTitle.json  Setting.json
Script/: CopyDLL.py
Server/: Application.cs
Shader/: GeometryPass2D.frag  GlyphPass2D.frag  SpritePass2D.frag
